Remove text-spacing in h1 for Fresher's page due to sizing issues with rfs

--- a/static/css/freshers.scss
+++ b/static/css/freshers.scss
@@ -82,10 +82,6 @@ body {
     color: rgba(255,255,255,.5) !important;
 }
 
-#index-freshers-landing h1.freshers-title-text {
-    letter-spacing: 0.4rem;
-}
-
 #index-freshers-landing div.freshers-title-img {
     img {
         max-width: 100%;
